crates/wat-core/tests/snapshots/parser__snap_and_list.snap
---
source: crates/wat-core/tests/parser.rs
expression: "parse(\"a && b\").unwrap()"
---
List(
    [
        (
            Pipeline(
                [
                    Simple(
                        SimpleCommand {
                            assignments: [],
                            name: "a",
                            args: [],
                            redirects: [],
                        },
                    ),
                ],
            ),
            And,
        ),
        (
            Pipeline(
                [
                    Simple(
                        SimpleCommand {
                            assignments: [],
                            name: "b",
                            args: [],
                            redirects: [],
                        },
                    ),
                ],
            ),
            End,
        ),
    ],
)
