crates/wat-core/tests/snapshots/parser__snap_full_acceptance.snap
---
source: crates/wat-core/tests/parser.rs
expression: "parse(r#\"echo \"hello world\" | grep h > out.txt && cat out.txt\"#).unwrap()"
---
List(
    [
        (
            Pipeline(
                [
                    Simple(
                        SimpleCommand {
                            assignments: [],
                            name: "echo",
                            args: [
                                "hello world",
                            ],
                            redirects: [],
                        },
                    ),
                    Simple(
                        SimpleCommand {
                            assignments: [],
                            name: "grep",
                            args: [
                                "h",
                            ],
                            redirects: [
                                Out(
                                    "out.txt",
                                ),
                            ],
                        },
                    ),
                ],
            ),
            And,
        ),
        (
            Pipeline(
                [
                    Simple(
                        SimpleCommand {
                            assignments: [],
                            name: "cat",
                            args: [
                                "out.txt",
                            ],
                            redirects: [],
                        },
                    ),
                ],
            ),
            End,
        ),
    ],
)
