crates/wat-core/tests/snapshots/parser__snap_multiple_redirects.snap
---
source: crates/wat-core/tests/parser.rs
expression: "parse(\"cmd < in.txt > out.txt\").unwrap()"
---
List(
    [
        (
            Pipeline(
                [
                    Simple(
                        SimpleCommand {
                            assignments: [],
                            name: "cmd",
                            args: [],
                            redirects: [
                                In(
                                    "in.txt",
                                ),
                                Out(
                                    "out.txt",
                                ),
                            ],
                        },
                    ),
                ],
            ),
            End,
        ),
    ],
)
