crates/wat-core/tests/snapshots/parser__snap_parse_error_lex_propagated.snap
---
source: crates/wat-core/tests/parser.rs
expression: "parse(\"'unterminated\").unwrap_err()"
---
ParseError {
    message: "unterminated single quote",
    offset: 0,
    incomplete: true,
}
