crates/wat-core/tests/snapshots/parser__snap_parse_error_missing_command.snap
---
source: crates/wat-core/tests/parser.rs
expression: "parse(\">\").unwrap_err()"
---
ParseError {
    message: "expected filename after '>'",
    offset: 1,
    incomplete: false,
}
