crates/wat-core/tests/snapshots/parser__snap_pipeline.snap
---
source: crates/wat-core/tests/parser.rs
expression: "parse(\"ls | grep foo\").unwrap()"
---
List(
    [
        (
            Pipeline(
                [
                    Simple(
                        SimpleCommand {
                            assignments: [],
                            name: "ls",
                            args: [],
                            redirects: [],
                        },
                    ),
                    Simple(
                        SimpleCommand {
                            assignments: [],
                            name: "grep",
                            args: [
                                "foo",
                            ],
                            redirects: [],
                        },
                    ),
                ],
            ),
            End,
        ),
    ],
)
