crates/wat-core/tests/snapshots/parser__snap_redirect_append.snap
---
source: crates/wat-core/tests/parser.rs
expression: "parse(\"echo hi >> log.txt\").unwrap()"
---
List(
    [
        (
            Pipeline(
                [
                    Simple(
                        SimpleCommand {
                            assignments: [],
                            name: "echo",
                            args: [
                                "hi",
                            ],
                            redirects: [
                                Append(
                                    "log.txt",
                                ),
                            ],
                        },
                    ),
                ],
            ),
            End,
        ),
    ],
)
