crates/wat-core/tests/snapshots/parser__snap_redirect_in.snap
---
source: crates/wat-core/tests/parser.rs
expression: "parse(\"cat < in.txt\").unwrap()"
---
List(
    [
        (
            Pipeline(
                [
                    Simple(
                        SimpleCommand {
                            assignments: [],
                            name: "cat",
                            args: [],
                            redirects: [
                                In(
                                    "in.txt",
                                ),
                            ],
                        },
                    ),
                ],
            ),
            End,
        ),
    ],
)
