crates/wat-core/tests/snapshots/parser__snap_redirect_out.snap
---
source: crates/wat-core/tests/parser.rs
expression: "parse(\"echo hi > out.txt\").unwrap()"
---
List(
    [
        (
            Pipeline(
                [
                    Command {
                        name: "echo",
                        args: [
                            "hi",
                        ],
                        redirects: [
                            Out(
                                "out.txt",
                            ),
                        ],
                    },
                ],
            ),
            End,
        ),
    ],
)
