crates/wat-core/tests/snapshots/parser__snap_semicolon_list.snap
---
source: crates/wat-core/tests/parser.rs
expression: "parse(\"a ; b ; c\").unwrap()"
---
List(
    [
        (
            Pipeline(
                [
                    Simple(
                        SimpleCommand {
                            assignments: [],
                            name: "a",
                            args: [],
                            redirects: [],
                        },
                    ),
                ],
            ),
            Semi,
        ),
        (
            Pipeline(
                [
                    Simple(
                        SimpleCommand {
                            assignments: [],
                            name: "b",
                            args: [],
                            redirects: [],
                        },
                    ),
                ],
            ),
            Semi,
        ),
        (
            Pipeline(
                [
                    Simple(
                        SimpleCommand {
                            assignments: [],
                            name: "c",
                            args: [],
                            redirects: [],
                        },
                    ),
                ],
            ),
            End,
        ),
    ],
)
