crates/wat-core/tests/snapshots/parser__snap_simple_command.snap
---
source: crates/wat-core/tests/parser.rs
expression: "parse(\"echo hello\").unwrap()"
---
List(
    [
        (
            Pipeline(
                [
                    Command {
                        assignments: [],
                        name: "echo",
                        args: [
                            "hello",
                        ],
                        redirects: [],
                    },
                ],
            ),
            End,
        ),
    ],
)
